# ocd

./: .gitguardian.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_RELEASE_CHECKLIST.md  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  analysis.json  install.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AGENTS.md
examples/: agent_demo.py
src/ocd/: __init__.py  __main__.py  cli.py
src/ocd/agents/: __init__.py  base.py  cleanup.py  naming.py  organization.py
src/ocd/analyzers/: __init__.py  content.py  directory.py  metadata.py
src/ocd/config/: __init__.py  manager.py  settings.py
src/ocd/core/: __init__.py  exceptions.py  types.py
src/ocd/credentials/: __init__.py  manager.py  store.py
src/ocd/executor/: __init__.py  engine.py  safety.py  sandbox.py
src/ocd/prompts/: __init__.py  engine.py  templates.py
src/ocd/providers/: __init__.py  base.py  local_slm.py  manager.py  registry.py  remote_api.py
src/ocd/tools/: __init__.py  file_operations.py
tests/: __init__.py  test_basic_functionality.py  test_imports.py
